--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body{
     background-attachment: scroll;
     background-size: cover;
 }
+h1{
+    
+    color: crimson;
+    padding-top: 400px;
+    text-align: center;
+    
+    
+
+}
 nav{
     height: 50px;
     width: 100%;
@@ -98,10 +107,10 @@ nav ul li a:hover, a.active{
 }
 .plus-minus-btn{
     color: #3352F2;
-    font-size: 30px;
-    padding: 2px;
-    margin: 10px 5px 0px 0px;
-    word-spacing: 20px;
+    font-size: 15px;
+    padding: 5px;
+    margin: 28px 10px 0px 0px;
+    word-spacing: 25px;
 }
 .booking-form .inputs{
     display: grid;
@@ -121,8 +130,4 @@ nav ul li a:hover, a.active{
 .amount{
     display: flex;
     justify-content: space-between;
-}
-.operator-size{
-    height: px;
-    width: 150px;
 }
